fix aligning text sizes

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -8,20 +8,20 @@ body {
     font-family: "Sofia";
     color:rgb(255, 255, 255);
     text-align: center;
-    font-size: 100px;
+    font-size: 300%;
 }
 
 .love {
     font-family: "Open Sans";
     color:rgb(255, 255, 255);
     text-align: center;
-    font-size: 200px;
+    font-size: 450%;
     padding-bottom: 20px;
 }
 
 .carousel-inner img {
     width: 100%;
-    height: auto;
+    height: 100%;
 }
 
 .carousel-item {
@@ -35,7 +35,7 @@ body {
 
 .text-block {
 position: absolute;
-top: 30%;
+top: 40%;
 width: 100%;
 background-color: black;
 color: white;
